--- a/portfolio.html
+++ b/portfolio.html
@@ -21,9 +21,7 @@
         <a class="header-portfolio" href="portfolio.html"><span>Portfolio</span></a>
         <a class="header-contact" href="kontakt.html"><span>Kontakt</span></a>
       </nav>
-      <a class="header-links-contact" href="mailto:info@devstudio.com"
-        ><span>info@devstudio.com</span></a
-      >
+      <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
       <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
     </header>
     <main>
@@ -127,10 +125,8 @@
       </section>
       <footer>
         <div class="down-section">
-          <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a
-          ><a class="header-logo-right-down" target="_self" href="index.html"
-            ><span>Studio</span></a
-          >
+          <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a>
+          <a class="header-logo-right-down" target="_self" href="index.html"><span>Studio</span></a>
           <address class="down-section">
             <p class="down-section-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
             <a class="down-section-email" href="mailto:info@example.com">info@example.com</a>
