--- a/index.html
+++ b/index.html
@@ -12,32 +12,17 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet" />
   </head>
-
   <body>
     <header>
       <nav>
-        <a class="header-logo-blue" target="_self" href="index.html">
-          <span>Web</span>
-        </a>
-        <a class="header-logo-right" target="_self" href="index.html">
-          <span>Studio</span>
-        </a>
-        <a class="header-agency" href="agencja.html">
-          <span>Agencja</span>
-        </a>
-        <a class="header-portfolio" href="portfolio.html">
-          <span>Portfolio</span>
-        </a>
-        <a class="header-contact" href="kontakt.html">
-          <span>Kontakt</span>
-        </a>
+        <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a>
+        <a class="header-logo-right" target="_self" href="index.html"><span>Studio</span></a>
+        <a class="header-agency" href="agencja.html"><span>Agencja</span></a>
+        <a class="header-portfolio" href="portfolio.html"><span>Portfolio</span></a>
+        <a class="header-contact" href="kontakt.html"><span>Kontakt</span></a>
       </nav>
-      <a class="header-links-contact" href="mailto:info@devstudio.com">
-        <span>info@devstudio.com</span>
-      </a>
-      <a class="header-links-contact" href="tel:48111111111">
-        <span>+48 111 111 111</span>
-      </a>
+      <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
+      <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
     </header>
     <main>
       <section class="main-button-place">
