--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <body>
     <header>
       <nav>
-        <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a>
-        <a class="header-logo-right" target="_self" href="index.html"><span>Studio</span></a>
+        <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a><a class="header-logo-right" target="_self" href="index.html"><span>Studio</span></a>
         <a class="header-agency" href="agencja.html"><span>Agencja</span></a>
         <a class="header-portfolio" href="portfolio.html"><span>Portfolio</span></a>
         <a class="header-contact" href="kontakt.html"><span>Kontakt</span></a>
@@ -30,11 +29,11 @@
         <button class="main-button" type="button">Zamów usługe</button>
       </section>
       <section>
-        <ul class="lorem-list">
+        <ul class="middle-section">
           <li>
             <div>
-              <h4 class="lorem-h-four">LOREM IPSUM</h4>
-              <p class="lorem-four">
+              <h4 class="middle-section-headings">LOREM IPSUM</h4>
+              <p class="middle-section-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                 sodales dui. Interdum et malesuada
               </p>
@@ -42,8 +41,8 @@
           </li>
           <li>
             <div>
-              <h4 class="lorem-h-four">LOREM IPSUM</h4>
-              <p class="lorem-four">
+              <h4 class="middle-section-headings">LOREM IPSUM</h4>
+              <p class="middle-section-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                 sodales dui. Interdum et malesuada
               </p>
@@ -51,8 +50,8 @@
           </li>
           <li>
             <div>
-              <h4 class="lorem-h-four">LOREM IPSUM</h4>
-              <p class="lorem-four">
+              <h4 class="middle-section-headings">LOREM IPSUM</h4>
+              <p class="middle-section-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                 sodales dui. Interdum et malesuada
               </p>
@@ -60,8 +59,8 @@
           </li>
           <li>
             <div>
-              <h4 class="lorem-h-four">LOREM IPSUM</h4>
-              <p class="lorem-four">
+              <h4 class="middle-section-headings">LOREM IPSUM</h4>
+              <p class="middle-section-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                 sodales dui. Interdum et malesuada
               </p>
@@ -71,7 +70,7 @@
       </section>
       <section>
         <h3 class="what-we-do">Czym się zajmujemy</h3>
-        <ul class="lorem-list">
+        <ul class="what-we-do-presentation">
           <li>
             <img
               src="images/whatwedoone.jpg"
@@ -95,9 +94,9 @@
           </li>
         </ul>
       </section>
-      <section class="team">
-        <h3 class="what-we-do">Nasz zespół</h3>
-        <ul class="lorem-list">
+      <section class="middle-section-our-team">
+        <h3 class="middle-section-our-team-heading">Nasz zespół</h3>
+        <ul class="middle-section-our-list">
           <li>
             <img
               src="images/productdesigner.jpg"
