--- a/portfolio.html
+++ b/portfolio.html
@@ -124,8 +124,7 @@
       </section>
       <footer>
         <div class="down-section">
-          <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a>
-          <a class="header-logo-right-down" target="_self" href="index.html"><span>Studio</span></a>
+          <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a><a class="header-logo-right-down" target="_self" href="index.html"><span>Studio</span></a>
           <address class="down-section">
             <p class="down-section-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
             <a class="down-section-email" href="mailto:info@example.com">info@example.com</a>
