--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="WebStudio" content="biuro projktowe + development" />
     <title>Studio</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,9 +15,9 @@
   <body>
     <header>
       <nav>
-        <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a><a class="header-logo-right" target="_self" href="index.html"><span>Studio</span></a>
+        <a class="header-logo-blue" target="_self" href="./index.html"><span>Web</span></a><a class="header-logo-right" target="_self" href="./index.html"><span>Studio</span></a>
         <a class="header-agency" href="agencja.html"><span>Agencja</span></a>
-        <a class="header-portfolio" href="portfolio.html"><span>Portfolio</span></a>
+        <a class="header-portfolio" href="./portfolio.html"><span>Portfolio</span></a>
         <a class="header-contact" href="kontakt.html"><span>Kontakt</span></a>
       </nav>
       <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
@@ -29,11 +29,11 @@
         <button class="main-button" type="button">Zamów usługe</button>
       </section>
       <section>
-        <ul class="middle-section">
+        <ul class="main-section">
           <li>
             <div>
-              <h4 class="middle-section-headings">LOREM IPSUM</h4>
-              <p class="middle-section-description">
+              <h4 class="main-section-headings">LOREM IPSUM</h4>
+              <p class="main-section-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                 sodales dui. Interdum et malesuada
               </p>
@@ -41,8 +41,8 @@
           </li>
           <li>
             <div>
-              <h4 class="middle-section-headings">LOREM IPSUM</h4>
-              <p class="middle-section-description">
+              <h4 class="main-section-headings">LOREM IPSUM</h4>
+              <p class="main-section-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                 sodales dui. Interdum et malesuada
               </p>
@@ -50,8 +50,8 @@
           </li>
           <li>
             <div>
-              <h4 class="middle-section-headings">LOREM IPSUM</h4>
-              <p class="middle-section-description">
+              <h4 class="main-section-headings">LOREM IPSUM</h4>
+              <p class="main-section-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                 sodales dui. Interdum et malesuada
               </p>
@@ -59,8 +59,8 @@
           </li>
           <li>
             <div>
-              <h4 class="middle-section-headings">LOREM IPSUM</h4>
-              <p class="middle-section-description">
+              <h4 class="main-section-headings">LOREM IPSUM</h4>
+              <p class="main-section-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                 sodales dui. Interdum et malesuada
               </p>
@@ -73,33 +73,33 @@
         <ul class="what-we-do-presentation">
           <li>
             <img
-              src="images/whatwedoone.jpg"
+              src="./images/whatwedoone.jpg"
               width="370"
               height="294"
               alt="projecting and coding at the desk" />
           </li>
           <li>
             <img
-              src="images/whatwedotwo.jpg"
+              src="./images/whatwedotwo.jpg"
               width="370"
               height="294"
               alt="projecting and coding for mobile device" />
           </li>
           <li>
             <img
-              src="images/whatwedothree.jpg"
+              src="./images/whatwedothree.jpg"
               width="370"
               height="294"
               alt="projecting and coding with full colour patern" />
           </li>
         </ul>
       </section>
-      <section class="middle-section-our-team">
-        <h3 class="middle-section-our-team-heading">Nasz zespół</h3>
-        <ul class="middle-section-our-list">
+      <section class="main-section-our-team">
+        <h3 class="main-section-our-team-heading">Nasz zespół</h3>
+        <ul class="main-section-our-team-list">
           <li>
             <img
-              src="images/productdesigner.jpg"
+              src="./images/productdesigner.jpg"
               width="270"
               height="260"
               alt="personal photo of product designer" />
@@ -108,7 +108,7 @@
           </li>
           <li>
             <img
-              src="images/frontenddeveloper.jpg"
+              src="./images/frontenddeveloper.jpg"
               width="270"
               height="260"
               alt="personal photo of Fronted Developer" />
@@ -117,7 +117,7 @@
           </li>
           <li>
             <img
-              src="images/marketing.jpg"
+              src="./images/marketing.jpg"
               width="270"
               height="260"
               alt="personal photo of Marketing role person" />
@@ -126,7 +126,7 @@
           </li>
           <li>
             <img
-              src="images/uidesigner.jpg"
+              src="./images/uidesigner.jpg"
               width="270"
               height="260"
               alt="personal photo of UI designer" />
@@ -136,15 +136,13 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <div class="down-section">
-        <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a><a class="header-logo-right-down" target="_self" href="index.html"><span>Studio</span></a>
-        <address class="down-section">
-          <p class="down-section-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
-          <a class="down-section-email" href="mailto:info@example.com">info@example.com</a>
-          <a class="down-section-tel" href="tel:48111111111">+48 111 111 111</a>
+    <footer class="footer">
+        <a class="header-logo-blue" target="_self" href="./index.html"><span>Web</span></a><a class="header-logo-right-down" target="_self" href="./index.html"><span>Studio</span></a>
+        <address class="footer">
+          <p class="footer-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
+          <a class="footer-email" href="mailto:info@example.com">info@example.com</a>
+          <a class="footer-tel" href="tel:48111111111">+48 111 111 111</a>
         </address>
-      </div>
     </footer>
   </body>
 </html>
