--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="WebStudio" content="biuro projktowe + development" />
     <title>Studio</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,9 +15,9 @@
   <body>
     <header>
       <nav>
-        <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a><a class="header-logo-right" target="_self" href="index.html"><span>Studio</span></a>
+        <a class="header-logo-blue" target="_self" href="./index.html"><span>Web</span></a><a class="header-logo-right" target="_self" href="./index.html"><span>Studio</span></a>
         <a class="header-agency" href="agencja.html"><span>Agencja</span></a>
-        <a class="header-portfolio" href="portfolio.html"><span>Portfolio</span></a>
+        <a class="header-portfolio" href="./portfolio.html"><span>Portfolio</span></a>
         <a class="header-contact" href="kontakt.html"><span>Kontakt</span></a>
       </nav>
       <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
@@ -49,7 +49,7 @@
         <ul class="portfolio-main-section">
           <li>
             <img
-              src="images/laptopwithportfolio.jpg"
+              src="./images/laptopwithportfolio.jpg"
               width="370"
               height="294"
               alt="laptop with main portfolio page open" />
@@ -58,7 +58,7 @@
           </li>
           <li>
             <img
-              src="images/basketballplayers.jpg"
+              src="./images/basketballplayers.jpg"
               width="370"
               height="294"
               alt="Basketball players at game" />
@@ -67,7 +67,7 @@
           </li>
           <li>
             <img
-              src="images/seafoodrestaurant.jpg"
+              src="./images/seafoodrestaurant.jpg"
               width="370"
               height="294"
               alt="Picture of logo an Seafood restaurant" />
@@ -75,13 +75,13 @@
             <p class="portfolio-description">Aplikacja</p>
           </li>
           <li>
-            <img src="images/headphone.jpg" width="370" height="294" alt="Image of headphone" />
+            <img src="./images/headphone.jpg" width="370" height="294" alt="Image of headphone" />
             <h4 class="portfolio-h-title">Projekt Prime</h4>
             <p class="portfolio-description">Marketing</p>
           </li>
           <li>
             <img
-              src="images/boxes.jpg"
+              src="./images/boxes.jpg"
               width="370"
               height="294"
               alt="Image with project of boxes" />
@@ -90,7 +90,7 @@
           </li>
           <li>
             <img
-              src="images/darkscreen.jpg"
+              src="./images/darkscreen.jpg"
               width="370"
               height="294"
               alt="Image of screen shows dark modern website" />
@@ -99,7 +99,7 @@
           </li>
           <li>
             <img
-              src="images/bookwithpictures.jpg"
+              src="./images/bookwithpictures.jpg"
               width="370"
               height="294"
               alt="Book with pictures on pages" />
@@ -107,13 +107,13 @@
             <p class="portfolio-description">Dizajn</p>
           </li>
           <li>
-            <img src="images/label.jpg" width="370" height="294" alt="Image of label project" />
+            <img src="./images/label.jpg" width="370" height="294" alt="Image of label project" />
             <h4 class="portfolio-h-title">Projeky LAB</h4>
             <p class="portfolio-description">Marketing</p>
           </li>
           <li>
             <img
-              src="images/workonlaptop.jpg"
+              src="./images/workonlaptop.jpg"
               width="370"
               height="294"
               alt="images/workonlaptop.jpg" />
@@ -122,16 +122,14 @@
           </li>
         </ul>
       </section>
-      <footer>
-        <div class="down-section">
-          <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a><a class="header-logo-right-down" target="_self" href="index.html"><span>Studio</span></a>
-          <address class="down-section">
-            <p class="down-section-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
-            <a class="down-section-email" href="mailto:info@example.com">info@example.com</a>
-            <a class="down-section-tel" href="tel:48111111111">+48 111 111 111</a>
-          </address>
-        </div>
-      </footer>
+      <footer class="footer">
+        <a class="header-logo-blue" target="_self" href="./index.html"><span>Web</span></a><a class="header-logo-right-down" target="_self" href="./index.html"><span>Studio</span></a>
+        <address class="footer">
+          <p class="footer-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
+          <a class="footer-email" href="mailto:info@example.com">info@example.com</a>
+          <a class="footer-tel" href="tel:48111111111">+48 111 111 111</a>
+        </address>
+    </footer>
     </main>
   </body>
 </html>
