--- a/portfolio.html
+++ b/portfolio.html
@@ -14,14 +14,15 @@
   </head>
   <body>
     <header>
+        <a class="header-logo-blue" target="_self" href="./index.html"><span>Web</span><span class="header-logo-right" target="_self" href="./index.html">Studio</span></a>
       <nav>
-        <a class="header-logo-blue" target="_self" href="./index.html"><span>Web</span></a><a class="header-logo-right" target="_self" href="./index.html"><span>Studio</span></a>
-        <a class="header-agency" href="agencja.html"><span>Agencja</span></a>
-        <a class="header-portfolio" href="./portfolio.html"><span>Portfolio</span></a>
-        <a class="header-contact" href="kontakt.html"><span>Kontakt</span></a>
+        <a class="header-links" href="agencja.html"><span>Agencja</span></a>
+        <a class="header-portfolio-StudioColor" href="./portfolio.html"><span>Portfolio</span></a>
+        <a class="header-links" href="kontakt.html"><span>Kontakt</span></a>
       </nav>
       <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
       <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
+    </header>
     </header>
     <main>
       <div>
@@ -123,10 +124,10 @@
         </ul>
       </section>
       <footer class="footer">
-        <a class="header-logo-blue" target="_self" href="./index.html"><span>Web</span></a><a class="header-logo-right-down" target="_self" href="./index.html"><span>Studio</span></a>
+        <a class="header-logo-blue" target="_self" href="./index.html"><span>Web</span><span class="header-logo-right-down" target="_self" href="./index.html">Studio</span></a>
         <address class="footer">
           <p class="footer-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
-          <a class="footer-email" href="mailto:info@example.com">info@example.com</a>
+          <a class="footer-email-portfolio-underline" href="mailto:info@example.com">info@example.com</a>
           <a class="footer-tel" href="tel:48111111111">+48 111 111 111</a>
         </address>
     </footer>
