--- a/portfolio.html
+++ b/portfolio.html
@@ -17,12 +17,11 @@
         <a class="header-logo-blue" target="_self" href="./index.html"><span>Web</span><span class="header-logo-right" target="_self" href="./index.html">Studio</span></a>
       <nav>
         <a class="header-links" href="agencja.html"><span>Agencja</span></a>
-        <a class="header-portfolio-StudioColor" href="./portfolio.html"><span>Portfolio</span></a>
+        <a class="header-portfolio" href="./portfolio.html"><span>Portfolio</span></a>
         <a class="header-links" href="kontakt.html"><span>Kontakt</span></a>
       </nav>
       <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
       <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
-    </header>
     </header>
     <main>
       <div>
