--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="WebStudio" content="biuro projktowe + development" />
     <title>Studio</title>
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css""/>
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,15 +15,22 @@
       rel="stylesheet" />
   </head>
   <body>
-    <header>
-        <a class="header-logo-blue" target="_self" href="./index.html"><span>Web</span><span class="header-logo-right" target="_self" href="./index.html">Studio</span></a>
-      <nav>
-        <a class="header-links" href="agencja.html"><span>Agencja</span></a>
-        <a class="header-links" href="./portfolio.html"><span>Portfolio</span></a>
-        <a class="header-links" href="kontakt.html"><span>Kontakt</span></a>
-      </nav>
-      <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
-      <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
+    <header class="header">
+      <div class="header-container">
+        <a class="header-logo-blue" target="_self" href="./index.html"
+          ><span>Web</span
+          ><span class="header-logo-right" target="_self" href="./index.html">Studio</span></a
+        >
+        <nav>
+          <a class="header-links" href="agencja.html"><span>Agencja</span></a>
+          <a class="header-links" href="./portfolio.html"><span>Portfolio</span></a>
+          <a class="header-links" href="kontakt.html"><span>Kontakt</span></a>
+        </nav>
+        <a class="header-links-contact" href="mailto:info@devstudio.com"
+          ><span>info@devstudio.com</span></a
+        >
+        <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
+      </div>
     </header>
     <main>
       <section class="main-button-place">
@@ -137,12 +146,15 @@
       </section>
     </main>
     <footer class="footer">
-        <a class="header-logo-blue" target="_self" href="./index.html"><span>Web</span><span class="header-logo-right-down" target="_self" href="./index.html">Studio</span></a>
-        <address class="footer">
-          <p class="footer-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
-          <a class="footer-email" href="mailto:info@example.com">info@example.com</a>
-          <a class="footer-tel" href="tel:48111111111">+48 111 111 111</a>
-        </address>
+      <a class="header-logo-blue" target="_self" href="./index.html"
+        ><span>Web</span
+        ><span class="header-logo-right-down" target="_self" href="./index.html">Studio</span></a
+      >
+      <address class="footer">
+        <p class="footer-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
+        <a class="footer-email" href="mailto:info@example.com">info@example.com</a>
+        <a class="footer-tel" href="tel:48111111111">+48 111 111 111</a>
+      </address>
     </footer>
   </body>
 </html>
