--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="WebStudio" content="biuro projktowe + development" />
   <title>Studio</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"/>
   <link rel="stylesheet" href="./css/styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,23 +15,23 @@
 </head>
 
 <body>
-  <header>
+  <header class="container flex-dir-row header">
     <a class="header-logo-blue" href="./index.html"><span>Web</span><span class="header-logo-right">Studio</span></a>
-    <nav>
+    <nav class="flex-dir-row">
       <a class="header-links" href="agencja.html"><span>Agencja</span></a>
       <a class="header-links" href="./portfolio.html"><span>Portfolio</span></a>
       <a class="header-links" href="kontakt.html"><span>Kontakt</span></a>
     </nav>
-    <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
-    <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
+    <a class="header-links-contact flex-dir-row" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
+    <a class="header-links-contact flex-dir-row" href="tel:48111111111"><span>+48 111 111 111</span></a>
   </header>
   <main>
-    <section class="main-button-place">
+    <section class="main-button-place container">
       <h1>EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU</h1>
       <button class="main-button" type="button">Zamów usługe</button>
     </section>
     <section>
-      <ul class="main-section">
+      <ul class="main-section container">
         <li>
           <div>
             <h4 class="main-section-headings">LOREM IPSUM</h4>
@@ -70,8 +71,8 @@
       </ul>
     </section>
     <section>
-      <h3 class="what-we-do">Czym się zajmujemy</h3>
-      <ul class="what-we-do-presentation">
+      <h3 class="what-we-do container">Czym się zajmujemy</h3>
+      <ul class="what-we-do-presentation container">
         <li>
           <img src="./images/whatwedoone.jpg" width="370" height="294" alt="projecting and coding at the desk" />
         </li>
@@ -84,7 +85,7 @@
         </li>
       </ul>
     </section>
-    <section class="main-section-our-team">
+    <section class="main-section-our-team container">
       <h3 class="main-section-our-team-heading">Nasz zespół</h3>
       <ul class="main-section-our-team-list">
         <li>
@@ -111,7 +112,7 @@
       </ul>
     </section>
   </main>
-  <footer class="footer">
+  <footer class="footer container">
     <a class="header-logo-blue" href="./index.html"><span>Web</span><span
         class="header-logo-right-down">Studio</span></a>
     <address class="footer">
